--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -28,7 +28,12 @@
             <NavLink class="nav-link" href="todo">
                 <span class="oi oi-check" aria-hidden="true"></span> Todo List
             </NavLink>
-        </div>
+        </div></div>
+        <div class="nav-item px-3"></div>
+         <NavLink class="nav-link" href="sync">
+                <span class="oi oi-bolt" aria-hidden="true"></span> Non Async
+            </NavLink>
+            </div>
     </nav>
 </div>
 
