--- a/_Imports.razor
+++ b/_Imports.razor
@@ -7,5 +7,6 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using BlazorWasmApp
+@using BlazorApp.Pages
 @using BlazorWasmApp.Shared
 @using Blazored.LocalStorage
