--- a/_Imports.razor
+++ b/_Imports.razor
@@ -7,6 +7,6 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using BlazorWasmApp
-@using BlazorApp.Pages
+@using BlazorWasmApp.Pages
 @using BlazorWasmApp.Shared
 @using Blazored.LocalStorage
